[gd_scene load_steps=6 format=2]

[ext_resource path="res://Objects/Door.gd" type="Script" id=1]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "close"
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 90, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "locked"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 1, 0 ), Vector3( 0, -1, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 90, 0 ) ]
}

[node name="Door" type="Spatial"]

[node name="Hinge" type="Spatial" parent="."]

[node name="DoorArea" type="Area" parent="Hinge"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Hinge/DoorArea"]
anims/RESET = SubResource( 1 )
anims/close = SubResource( 2 )
anims/locked = SubResource( 3 )
anims/open = SubResource( 4 )

[connection signal="mouse_entered" from="Hinge/DoorArea" to="Hinge/DoorArea" method="_on_Door_mouse_entered"]
[connection signal="mouse_exited" from="Hinge/DoorArea" to="Hinge/DoorArea" method="_on_Door_mouse_exited"]
[connection signal="animation_finished" from="Hinge/DoorArea/AnimationPlayer" to="Hinge/DoorArea" method="_on_AnimationPlayer_animation_finished"]
